# assert-unmoved

./: .deny.toml  .external-types.toml  .git-blame-ignore-revs  .markdownlint-cli2.yaml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/: dependabot.yml
.github/.cspell/: project-dictionary.txt  rust-dependencies.txt
.github/workflows/: ci.yml
scripts/: publish.sh
src/: assert_unmoved.rs  lib.rs
tests/: test.rs
tools/codegen/: Cargo.toml
tools/codegen/src/: file.rs  main.rs
