[package]
name = "assert-unmoved"
version = "0.1.2"
authors = ["Taiki Endo <te316e89@gmail.com>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/taiki-e/assert-unmoved"
documentation = "https://docs.rs/assert-unmoved"
keywords = ["assert", "pin"]
categories = ["development-tools::testing"]
exclude = ["/.*", "/tools"]
description = """
A type that asserts that the underlying type is not moved after being pinned
and mutably accessed.
"""

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]

[workspace]

[features]
# Implements futures v0.3 traits for assert-unmoved types.
futures03 = ["futures-core", "futures-io", "futures-sink"]
# Implements tokio v1 traits for assert-unmoved types.
tokio1 = ["tokio1-crate"]
# Implements tokio v0.3 traits for assert-unmoved types.
tokio03 = ["tokio03-crate"]
# Implements tokio v0.2 traits for assert-unmoved types.
tokio02 = ["tokio02-crate", "bytes05"]

# Note: futures-*, tokio, and bytes are public dependencies.
[dependencies]
pin-project = "1"

futures-core = { version = "0.3", optional = true, default-features = false }
futures-io = { version = "0.3", optional = true, default-features = false, features = ["std"] }
futures-sink = { version = "0.3", optional = true, default-features = false }
tokio02-crate = { package = "tokio", version = "0.2.5", optional = true, default-features = false }
bytes05 = { package = "bytes", version = "0.5", optional = true, default-features = false, features = ["std"] }
tokio03-crate = { package = "tokio", version = "0.3", optional = true, default-features = false }
tokio1-crate = { package = "tokio", version = "1", optional = true, default-features = false }

[dev-dependencies]
static_assertions = "1"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
