[package]
name = "assert-unmoved"
version = "0.1.5"
edition = "2018"
rust-version = "1.46"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/taiki-e/assert-unmoved"
keywords = ["assert", "pin"]
categories = ["development-tools::testing"]
exclude = ["/.*", "/tools"]
description = """
A type that asserts that the underlying type is not moved after being pinned
and mutably accessed.
"""

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

[package.metadata.cargo_check_external_types]
# The following are external types that are allowed to be exposed in our public API.
allowed_external_types = [
    "futures_core::*",
    "futures_io::*",
    "futures_sink::*",
    "tokio::*",
]

[workspace]
members = ["tools/codegen"]

[lib]
doc-scrape-examples = false

[features]
# Implements futures v0.3 traits for assert-unmoved types.
futures03 = ["futures-core", "futures-io", "futures-sink"]
# Implements tokio v1 traits for assert-unmoved types.
tokio1 = ["tokio1-crate"]

# Note: futures-* and tokio are public dependencies.
[dependencies]
pin-project-lite = "0.2.13"

futures-core = { version = "0.3", optional = true, default-features = false }
futures-io = { version = "0.3", optional = true, default-features = false, features = ["std"] }
futures-sink = { version = "0.3", optional = true, default-features = false }
tokio1-crate = { package = "tokio", version = "1", optional = true, default-features = false }

[dev-dependencies]
static_assertions = "1"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
